feat: Complete Phase 5 Expansion - Eliminations, Finance, and Heat Map modules

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.17",
     "framer-motion": "^12.23.24",
+    "lucide-react": "^0.554.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-hook-form": "^7.66.1",
     "react-router-dom": "^7.9.6",
+    "recharts": "^3.5.0",
     "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
